--- a/public/views/token.html
+++ b/public/views/token.html
@@ -147,7 +147,7 @@
                           <th width="8%"> Block </th>
                           <th width="15%"> From </th>
                           <th width="15%"> To </th>
-                          <th width="10%"> ETZ </th>
+                          <th width="10%"> TAI </th>
                           <th width="0%"> gas </th>
                           <th width="12%"> Age </th>
                       </tr>
@@ -177,7 +177,7 @@
                                 <th> Block </th>
                                 <th> From </th>
                                 <th> To </th>
-                                <th> ETZ </th>
+                                <th> TAI </th>
                                 <!--th style="text-align:right"> Amount </th>
                                 <th>type</th-->
                             </tr>
