--- a/public/views/addressList.html
+++ b/public/views/addressList.html
@@ -6,7 +6,7 @@
                 <thead>
                     <tr>
                         <th width="60%"> Address </th>
-                        <th width="15%"> ETZ </th>
+                        <th width="15%"> TAI </th>
                         <th width="15%"> Type </th>
                     </tr>
                 </thead>
