--- a/public/views/summary-stats.html
+++ b/public/views/summary-stats.html
@@ -7,7 +7,7 @@
                         <small class="font-green-sharp">$</small>
                         <span data-counter="counterup" data-value="stats.usdEtc">{{stats.usdEtc}}</span>
                     </h3>
-                    <small>ETZ Price</small>
+                    <small>TAI Price</small>
                 </div>
                 <div class="icon">
                     <i class="icon-fire"></i>
@@ -16,11 +16,11 @@
             <div class="progress-info">
                 <div class="progress">
                     <span style="width: {{stats.usdEtcEth}}%;" class="progress-bar progress-bar-success green-sharp">
-                        <span class="sr-only">{{stats.usdEtcEth}}% ETZ/ETH USD price</span>
+                        <span class="sr-only">{{stats.usdEtcEth}}% TAI/ETH USD price</span>
                     </span>
                 </div>
                 <div class="status">
-                    <div class="status-title"> ETZ/ETH USD Price </div>
+                    <div class="status-title"> TAI/ETH USD Price </div>
                     <div class="status-number"> {{stats.usdEtcEth}}% </div>
                 </div>
             </div>
@@ -33,7 +33,7 @@
                     <h3 class="font-red-haze">
                         <span data-counter="counterup" data-value="stats.etcHashrate">{{stats.etcHashrate | totalDifficulty}}/s</span>
                     </h3>
-                    <small>ETZ Avg Hashrate</small>
+                    <small>TAI Avg Hashrate</small>
                 </div>
             </div>
             <div class="progress-info">
@@ -43,7 +43,7 @@
                     </span>
                 </div>
                 <div class="status">
-                    <div class="status-title"> ETZ/ETH Hashrate </div>
+                    <div class="status-title"> TAI/ETH Hashrate </div>
                     <div class="status-number"> {{stats.etcEthHash}}% </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                     </span>
                 </div>
                 <div class="status">
-                    <div class="status-title"> ETZ/ETH difficulty </div>
+                    <div class="status-title"> TAI/ETH difficulty </div>
                     <div class="status-number"> {{stats.etcEthDiff}}% </div>
                 </div>
             </div>
