--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,11 @@
     <!--<![endif]-->
     <!-- BEGIN HEAD -->
     <head>
-        <title data-ng-bind="'EtherZero | ' + $state.current.data.pageTitle"></title>
+        <title data-ng-bind="'TaiChain | ' + $state.current.data.pageTitle"></title>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport" />
-        <meta content="EtherZero Block Explorer" name="description"/>
+        <meta content="TaiChain Block Explorer" name="description"/>
         <meta content="Elaine" name="author" />
         <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
 
