--- a/public/views/witness.html
+++ b/public/views/witness.html
@@ -8,7 +8,7 @@
 <div class="row">
         <table class="witness_title_class" width="100%">
             <tr >
-                <td width="15%" height="25">Masternode ID  </td> <td><span class="eth-stat-text">0x{{witness}}</span></td>
+                <td width="15%" height="25">Masternode ID  </td> <td><span class="eth-stat-text">tit{{witness}}</span></td>
                 <td width="15%" height="25">Masternode Rewards</td> <td><span class="eth-stat-text">{{reward}}</span> <font style="color:darkgrey">TAI</font></td>
             </tr>
             <tr >
