--- a/public/views/witnessList.html
+++ b/public/views/witnessList.html
@@ -13,7 +13,7 @@
                             </tr>
                         </thead>
                 <tr ng-repeat="data in listData track by $index">
-                    <td> <a class="font-green" href="/masternode/{{data.witness}}">0x{{data.witness}} </a></td>
+                    <td> <a class="font-green" href="/masternode/{{data.witness}}">tit{{data.witness}} </a></td>
                     <td >{{data.blocksNum}}</td>
                     <td >{{data.reward}}</td>
                     <td >{{data.lastCountTo}}</td>
