--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
     <!--<![endif]-->
     <!-- BEGIN HEAD -->
     <head>
-        <title data-ng-bind="'TaiChain | ' + $state.current.data.pageTitle"></title>
+        <title data-ng-bind="'TitProtocol ' + $state.current.data.pageTitle"></title>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta content="width=device-width, initial-scale=1" name="viewport" />
