--- a/public/views/address.html
+++ b/public/views/address.html
@@ -65,7 +65,7 @@
                             <th width="8%"> Block </th>
                             <th width="15%"> From </th>
                             <th width="15%"> To </th>
-                            <th width="10%"> TAI </th>
+                            <th width="10%"> TIT </th>
                             <th width="0%"> gas </th>
                             <th width="12%"> Age </th>
                         </tr>
