--- a/public/views/summary-stats.html
+++ b/public/views/summary-stats.html
@@ -7,7 +7,7 @@
                         <small class="font-green-sharp">$</small>
                         <span data-counter="counterup" data-value="stats.usdEtc">{{stats.usdEtc}}</span>
                     </h3>
-                    <small>TAI Price</small>
+                    <small>TIT Price</small>
                 </div>
                 <div class="icon">
                     <i class="icon-fire"></i>
@@ -33,7 +33,7 @@
                     <h3 class="font-red-haze">
                         <span data-counter="counterup" data-value="stats.etcHashrate">{{stats.etcHashrate | totalDifficulty}}/s</span>
                     </h3>
-                    <small>TAI Avg Hashrate</small>
+                    <small>TIT Avg Hashrate</small>
                 </div>
             </div>
             <div class="progress-info">
