--- a/public/views/witness.html
+++ b/public/views/witness.html
@@ -9,7 +9,7 @@
         <table class="witness_title_class" width="100%">
             <tr >
                 <td width="15%" height="25">Masternode ID  </td> <td><span class="eth-stat-text">tit{{witness}}</span></td>
-                <td width="15%" height="25">Masternode Rewards</td> <td><span class="eth-stat-text">{{reward}}</span> <font style="color:darkgrey">TAI</font></td>
+                <td width="15%" height="25">Masternode Rewards</td> <td><span class="eth-stat-text">{{reward}}</span> <font style="color:darkgrey">TIT</font></td>
             </tr>
             <tr >
                 <td width="15%" height="25">Block Time</td> <td><span class="eth-stat-text">{{blockTime}}</span> <font style="color:darkgrey">s</font></td>
