--- a/public/views/home.html
+++ b/public/views/home.html
@@ -80,7 +80,7 @@
 <hr style="margin-top:10px;margin-bottom:10px;">
 
 <div class="row"> -->
-    <div class="col-lg-3 col-md-4 col-sm-1 col-xs-12">
+    <div class="col-lg-2 col-md-4 col-sm-1 col-xs-12">
         <div class="headerTitleC ">
             <div class="display">
                 <div class="number">
@@ -102,11 +102,22 @@
         </div>
     </div>
 
-    <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+    <div class="col-lg-1 col-md-3 col-sm-4 col-xs-12">
         <div class="headerTitleC ">
             <div class="display">
                 <div class="number">
                     <h3>{{totalNodes}}</h3>
+                    <small>Total Master Nodes</small>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+        <div class="headerTitleC ">
+            <div class="display">
+                <div class="number">
+                    <h3>{{totalBalance}}</h3>
                     <small>Total Master Nodes</small>
                 </div>
             </div>
