--- a/public/views/home.html
+++ b/public/views/home.html
@@ -117,7 +117,7 @@
         <div class="headerTitleC ">
             <div class="display">
                 <div class="number">
-                    <h3>{{Number(totalBalance)+5500000}}</h3>
+                    <h3>{{totalBalance}}</h3>
                     <small>Total Master Nodes</small>
                 </div>
             </div>
