--- a/public/views/home.html
+++ b/public/views/home.html
@@ -91,7 +91,7 @@
         </div>
     </div>
 
-    <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
+    <div class="col-lg-1 col-md-3 col-sm-4 col-xs-12">
         <div class="headerTitleC ">
             <div class="display">
                 <div class="number">
@@ -102,7 +102,7 @@
         </div>
     </div>
 
-    <div class="col-lg-1 col-md-3 col-sm-4 col-xs-12">
+    <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12">
         <div class="headerTitleC ">
             <div class="display">
                 <div class="number">
@@ -118,7 +118,7 @@
             <div class="display">
                 <div class="number">
                     <h3>{{totalBalance}}</h3>
-                    <small>Total Master Nodes</small>
+                    <small>Total TIT</small>
                 </div>
             </div>
         </div>
