--- a/public/views/home.html
+++ b/public/views/home.html
@@ -107,7 +107,7 @@
             <div class="display">
                 <div class="number">
                     <h3>{{totalNodes}}</h3>
-                    <small>Total Master Nodes</small>
+                    <small>Master Nodes</small>
                 </div>
             </div>
         </div>
